--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,18 @@ body {
     height: 100vh;
     display: flex;
     flex-flow: column wrap;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .gameBoard {
     display: grid;
-    height: 80vh;
+    height: 70vh;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     /* gap: 2px; */
     border: 4px solid purple;
     padding: 4px;
-    margin: 5% 5%;
+    margin: 5%;
 }
 
 .blankTile {
@@ -21,4 +22,20 @@ body {
     /* width: 100px; */
     height: 70%;
     border: 2px solid violet;
+}
+
+.buttonPanel {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 5%;
+}
+
+button {
+    color: aliceblue;
+    background-color: violet;
+    font-size: 32px;
+    font-weight: 700;
+    padding: 20px 30px;
+    border: 4px solid purple;
+    border-radius: 10px;
 }
