--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,20 @@ body {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     /* gap: 2px; */
+    text-align: center;
     border: 4px solid purple;
     padding: 4px;
     margin: 5%;
 }
 
 .blankTile {
-    /* width: max(100px, 1fr);
-    height: min(100px, 1fr); */
-    /* width: 100px; */
+    color: black;
+    font-size: 42px;
+    vertical-align: middle;
+    /* justify-items: center; */
+    /* align-items: center; */
+    /* text-align: center; */
+    /* align-content: center; */
     height: 70%;
     border: 2px solid violet;
 }
