--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,18 @@
 body {
     display: flex;
-    /* height: 100vh; */
+    height: 95vh;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 5% 10%;
 }
 
-.container.gameBoard {
-    display: grid;
-    height: 606px;
-    width: 600px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    text-align: center;
-    border: 4px solid purple;
-    margin: 0 0 30px 0;
-}
-
-.blankTile.gameBoard {
-    color: magenta;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 136px;
-    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-    font-weight: 900;
-    line-height: 200px;
-    height: 200px;
-    border: 2px solid violet;
-    margin: -1px;
-}
-
-.buttonPanel {
+.anchor {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
+    height: 100%;
     margin: 0 auto;
 }
 
-button {
+.headerPanel {
     color: aliceblue;
     background-color: violet;
     font-size: 28px;
@@ -44,17 +22,58 @@ button {
     border-radius: 10px;
 }
 
+.container.gameBoard {
+    display: grid;
+    height: 532px;
+    width: 525px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    text-align: center;
+    border: 4px solid purple;
+}
+
+.blankTile.gameBoard {
+    color: magenta;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 118px;
+    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+    font-weight: 900;
+    line-height: 175px;
+    height: 175px;
+    border: 2px solid violet;
+    margin: -1px;
+}
+
+.buttonPanel {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+button {
+    color: aliceblue;
+    background-color: violet;
+    font-size: 26px;
+    font-weight: 700;
+    padding: 15px 20px;
+    border: 4px solid purple;
+    border-radius: 10px;
+}
+
 .displayMarker {
+    box-sizing: border-box;
     color: aliceblue;
     background-color: purple;
-    height: 45px;
-    width: 45px;
+    height: 55px;
+    width: 55px;
     line-height: 40px;
     text-align: center;
     font-size: 42px;
     font-weight: 700;
-    padding: 10px 10px;
-    border: 14px solid violet;
+    /* padding: 10px 10px; */
+    border: 6px solid violet;
     border-radius: 10px;
     margin: 0 10px;
 }
