--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     height: 100%;
     margin: 0 auto;
+    border: 2px solid red;
 }
 
 .headerPanel {
+    box-sizing: border-box;
     color: aliceblue;
     background-color: violet;
+    width: 100%;
     font-size: 28px;
     font-weight: 700;
-    padding: 15px 25px;
+    padding: 25px 25px;
     border: 4px solid purple;
     border-radius: 10px;
 }
@@ -76,4 +80,16 @@ button {
     border: 6px solid violet;
     border-radius: 10px;
     margin: 0 10px;
+}
+
+.resetGame {
+    box-sizing: border-box;
+    color: magenta;
+    background-color: white;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 34px;
+    font-weight: 900;
+    border: 10px solid magenta;
+    border-radius: 20px;
+    width: 75%;
 }
